@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd June 16, 2004
+.Dd November 16, 2005
 .Dt PKGCLEAN 1
 .Sh NAME
 .Nm pkgclean
@@ -51,5 +51,6 @@ the environment variable
 .Pa PKGSRCDIR .
 .Sh SEE ALSO
 http://www.pkgsrc.org/
-.Sh AUTHOR
-.An Peter Postma Aq peter@pointless.nl
+.Sh AUTHORS
+.An Peter Postma Aq peter@pointless.nl ,
+.An Roland Illig Aq rillig@NetBSD.org .
