@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11967 2005/11/17 22:29:51 minskim Exp $
+$NetBSD: CHANGES,v 1.11968 2005/11/17 22:36:39 rillig Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -5269,3 +5269,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated emulators/ZIPIdent to 2.5 [wiz 2005-11-17]
 	Updated security/MyPasswordSafe to 20050615 [wiz 2005-11-17]
 	Added print/hugeotp2ocp version 3.0 [minskim 2005-11-17]
+	Updated pkgtools/pkgclean to 20050118 [rillig 2005-11-17]
